# gsheet_mcp

./: Dockerfile  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: docker-publish.yml
gsheet_mcp/: __init__.py  __main__.py  core.py
